  when the function exists but is disabled. Introduced Maintenance::posix_isatty().
* (bug 33305) Make mw.util.addCSS resistant to IE's @font-face bug by setting
  cssText after DOM insertion.
* (bug 29102) Upgrades no longer fail with the error "Unknown character set: 'mysql4'.
* (bug 25355) Parser generates edit section links for special pages.

== MediaWiki 1.18 ==
2011-11-24

This is the first stable release of the MediaWiki 1.18 branch.

=== Summary of selected changes in 1.18 ===

Selected changes since MediaWiki 1.17 that may be of interest:

* Some of the more commonly used MediaWiki extensions are now included in the
  release tarball. These extensions are ConfirmEdit, Gadgets, Nuke, ParserFunctions,
  Renameuser, Vector and WikiEditor.

* Gender support has been improved, meaning user pages can display the correct gender
  variant of "User" can now be used.

* MediaWiki can now detect the camera orientation of an image from the Exif metadata, and
  can rotate the image thumbnail appropriately. Metadata support has been generally
  improved, and can now extract IPTC and XMP metadata.

* Improved directionality support in 1.18 means that MediaWiki is better to use for
  RTL users.

* MediaWiki now supports protocol - relative URLs in links, interwiki targets and $wgServer

* Math support has been removed from core

=== Changes since 1.18.0rc1 ===
* (bug 32228) regression in Special:Search which did not conserve profile on new search
* (bug 32460) Categories were improperly aligned in Simple and CologneBlue
* (bug 32412) TOC links on [[Special:EditWatchlist]] points to the fieldsets
* (bug 32582) Fix TOC show/hide link regression on IE 8

=== Changes since 1.18 beta 1 ===
* (bug 31886) Wrong titles redirecting to Special:Badtitle in the 1.18 deployment.
* (bug 32051) Fix description for wlprop=sizes.
* (bug 31913) Special:MostLinkedTemplates had an incorrect GROUP BY clause
  under Microsoft SQL.
* (bug 32100) installer complains about suhosin GET limit.