@@ -1258,6 +1258,12 @@ abstract class Skin extends ContextSource {
 				if ( strpos( $line, '|' ) !== false ) { // sanity check
 					$line = MessageCache::singleton()->transform( $line, false, null, $this->getTitle() );
 					$line = array_map( 'trim', explode( '|', $line, 2 ) );
+					if ( count( $line ) !== 2 ) {
+						// Second sanity check, could be hit by people doing
+						// funky stuff with parserfuncs... (bug 3321)
+						continue;
+					}
+
 					$extraAttribs = array();
 
 					$msgLink = wfMessage( $line[0] )->inContentLanguage();
@@ -1269,7 +1275,6 @@ abstract class Skin extends ContextSource {
 					} else {
 						$link = $line[0];
 					}
-
 					$msgText = wfMessage( $line[1] );
 					if ( $msgText->exists() ) {
 						$text = $msgText->text();
