@@ -105,6 +105,36 @@ class SideBarTest extends MediaWikiLangTestCase {
 		);
 
 	}
+	/** bug 33321 */
+	function testTrickyPipe() {
+		$this->assertSidebar(
+		array( 'Title' => array(
+			# The first 2 are skipped
+			# Doesn't really test the url properly
+			# because it will vary with $wgArticlePath et al.
+			# ** Baz|Fred
+			array(
+				'text'   => 'Fred',
+				'href'   => Title::newFromText( 'Baz' )->getLocalUrl(),
+				'id'     => 'n-Fred',
+				'active' => null,
+			),
+			array(
+				'text'   => 'title-to-display',
+				'href'   => Title::newFromText( 'page-to-go-to' )->getLocalUrl(),
+				'id'     => 'n-title-to-display',
+				'active' => null,
+			),
+		)),
+'* Title
+** {{PAGENAME|Foo}}
+** Bar
+** Baz|Fred
+** {{PLURAL:1|page-to-go-to{{int:pipe-separator/en}}title-to-display|branch not taken}}
+'
+		);
+
+	}
 
 
 	#### Attributes for external links ##########################
